--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -476,7 +476,7 @@ nav > ul li a:active {
 	display: flex;
 	flex: 0 1 auto;
 	align-content: flex-start;
-	justify-content: flex-start;
+	justify-content: center;
 	flex-grow: 1;
 	flex-wrap: wrap;
 	margin-top: 93px;
